# next-story

./: .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json  selection-entry-options-demo.html
openspec/specs/ai-panel-state-structure/: spec.md
spec/: 第一版方向共识-2026-07-01.md
src/: ai-feature.ts  ai-panel-conversation.ts  ai-panel-request-state.ts  ai-panel-scroll.ts  ai-panel-state.ts  ai-panel.ts  ai-request.ts  caret-coordinates.ts  close-guard.ts  dom.ts  editor-save-state.ts  editor.ts  leave-dialog.ts  leave-guard.ts  llm-config-form.ts  llm-config-state.ts  main.ts  new-project-form.ts  notebook-memory.ts  project-api.ts  project-leave-flow.ts  selection-adapter.ts  selection-entry.ts  styles.css  types.ts  views.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/llm_config/: generate.rs  http.rs  mod.rs
src-tauri/src/project/: mod.rs  operations.rs  validation.rs
src-tauri/tests/: llm_config_test.rs  project_test.rs
tests/: ai-feature-routing.test.ts  ai-generate-bridge.test.ts  ai-panel-conversation.test.ts  ai-panel-dom.test.ts  ai-panel-scroll.test.ts  ai-panel-state.test.ts  ai-request.test.ts  caret-coordinates.test.ts  editor-save-state.test.ts  leave-dialog-focus.test.ts  leave-safety.test.ts  llm-config-state.test.ts  project-leave-continuation.test.ts  selection-adapter.test.ts  selection-entry.test.ts
反面案例/: 项目系统性审计报告-2026-06-30.md
反面案例/legacy/: 旧项目失败复盘.md  旧项目概览.md
反面案例/reboot/: V1边界草案.md  初心保留摘录.md  反面案例清单.md  新项目启动护栏.md
方向/: 核心方向宪章.md  第一版方向共识-2026-07-01.md
(+84 files in other folders)
